[gd_scene load_steps=2 format=3 uid="uid://wiachhiqhtgw"]

[ext_resource type="Script" path="res://Scripts/Pause.gd" id="1_2bhqg"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2bhqg")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.188235, 0.188235, 0.188235, 0.501961)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60
alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Continue"

[node name="MainMenuButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Main Menu"

[node name="QuitButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Quit"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
